Istio-version/assests/docker-data-api/app.yaml
kind: Service
apiVersion: v1
metadata:
  name: data-api
  annotations:
    # cloud.google.com/neg: '{"ingress": true}'
    # beta.cloud.google.com/backend-config: '{"ports": {"9999":"mud-backendconfig"}}'
spec:
  sessionAffinity: ClientIP 
  selector:
    app: data-api
  ports:
  - protocol: TCP
    port: 9998
    name: data-api
    targetPort: 9998
#   type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: data-api
spec:
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
        #   maxUnavailable: 25%
    selector:
        matchLabels:
            app: data-api
    replicas: 1
    template:
        metadata:
            labels:
                app: data-api
        spec:
            # affinity:
            #     nodeAffinity:
            #       requiredDuringSchedulingIgnoredDuringExecution:
            #         nodeSelectorTerms:
            #         - matchExpressions:
            #           - key: dedicated
            #             operator: In
            #             values: 
            #             - mud
            # tolerations:
            #     - key: dedicated
            #       operator: Equal
            #       value: mud
            #       effect: NoSchedule
            containers:
            -   name: data-api
                image: gcr.io/kalschi-istio/data-api:v10
                imagePullPolicy: Always
                ports:
                    -   name: ws
                        containerPort: 9998
                livenessProbe:
                    tcpSocket:
                        port: 9998
                    initialDelaySeconds: 30
                readinessProbe:
                    tcpSocket:
                        port: 9998
                    initialDelaySeconds: 30
                resources:
                    requests:
                        cpu: 100m
                        memory: 1G
