Istio-version/assests/docker-data-api/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: data-api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data
spec:
  hosts:
  - "*"
  gateways:
  - data-api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: data-api
      weight: 100
